[gd_scene load_steps=4 format=3 uid="uid://c1s37n2n08dy"]

[ext_resource type="Script" path="res://scenes/game_over/game_over.gd" id="1_j06p3"]
[ext_resource type="LabelSettings" uid="uid://cb2u5o7m8jgyn" path="res://assets/LG_Title.tres" id="1_r6opf"]
[ext_resource type="LabelSettings" uid="uid://bslymv1e3rjua" path="res://assets/GN_32_white.tres" id="2_fjsah"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j06p3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0823529, 0, 0.380392, 0.760784)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
label_settings = ExtResource("1_r6opf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Score: hi-score:"
label_settings = ExtResource("2_fjsah")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContinueLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Shoot to continue..."
label_settings = ExtResource("2_fjsah")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer3" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContinueTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="ContinueTimer" to="." method="_on_continue_timer_timeout"]
